# sheet-doctor

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  PRODUCTION_BLOCKERS.md  PUBLIC_DATA_EVALUATION.md  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
sample-data/: extreme_mess.csv  extreme_mess_report.json  extreme_mess_report.txt  generate_extreme_mess.py  generate_xlsx.py  messy_sample.csv  messy_sample.xlsx
schemas/: README.md  csv-diagnose.schema.json  csv-heal-summary.schema.json  csv-report.schema.json  excel-diagnose.schema.json  excel-heal-summary.schema.json
sheet_doctor/: __init__.py  cli.py  contracts.py
sheet_doctor/bundled/skills/csv-doctor/scripts/: column_detector.py  diagnose.py  heal.py  issue_taxonomy.py  reporter.py
sheet_doctor/bundled/skills/csv-doctor/scripts/heal_modules/: semantic.py  shared.py  workbook.py
skills/csv-doctor/: README.md  SKILL.md
skills/csv-doctor/scripts/: column_detector.py  diagnose.py  heal.py  loader.py  reporter.py
skills/csv-doctor/scripts/heal_modules/: normalization.py  preprocessing.py  summary.py
skills/excel-doctor/: SKILL.md
skills/excel-doctor/scripts/: diagnose.py  heal.py
tests/: test_cli.py  test_column_detector.py  test_contracts.py  test_data_shape_edges.py  test_diagnose_formats.py  test_excel_doctor.py  test_heal_edge_cases.py  test_loader.py  test_reporter.py
tests/fixtures/: generate_excel_doctor_fixtures.py  generate_loader_fixtures.py
tests/fixtures/excel/: duplicate_headers.xlsx  formula_cases.xlsx  hidden_layers.xlsx  merged_edges.xlsx  notes_totals.xlsx  preamble_report.xlsx  ragged_clinical.xlsx  stacked_headers.xlsx  text_date_cleanup.xlsx
tests/fixtures/loader/: corrupt.xls  corrupt.xlsx  encrypted.xlsx  header_only.csv  multisheet.ods  multisheet.xlsx  nested_records.json  records.json  records.jsonl  sample.tsv  semicolon_people.csv
tests/fixtures/workbooks/: preamble_workbook.xlsx  ragged_workbook.xlsx  stacked_headers_workbook.xlsx
tests/golden/: extreme_mess_report.json  extreme_mess_report.txt
web/: UI_CHANGELOG.md  app.py
