[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sheet-doctor"
version = "0.5.0"
description = "Local-first spreadsheet triage and cleanup for messy CSV and Excel files"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "razzo007" }
]
keywords = [
  "csv",
  "excel",
  "spreadsheet",
  "data-cleaning",
  "cli",
  "openpyxl",
  "pandas",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: Financial and Insurance Industry",
  "Intended Audience :: Information Technology",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Office/Business :: Financial :: Spreadsheet",
  "Topic :: Software Development :: Quality Assurance",
  "Topic :: Utilities",
]
dependencies = [
  "pandas",
  "chardet",
  "openpyxl",
  "streamlit",
  "requests",
]

[project.urls]
Homepage = "https://github.com/razzo007/sheet-doctor"
Repository = "https://github.com/razzo007/sheet-doctor"
Issues = "https://github.com/razzo007/sheet-doctor/issues"
Changelog = "https://github.com/razzo007/sheet-doctor/blob/main/CHANGELOG.md"
Funding = "https://buymeacoffee.com/quietlytools"

[project.scripts]
sheet-doctor = "sheet_doctor.cli:main"

[project.optional-dependencies]
excel-legacy = ["xlrd"]
ods = ["odfpy"]
all = ["xlrd", "odfpy"]

[tool.setuptools]
packages = ["sheet_doctor"]

[tool.setuptools.package-data]
sheet_doctor = [
  "bundled/skills/csv-doctor/scripts/*.py",
  "bundled/skills/csv-doctor/scripts/heal_modules/*.py",
  "bundled/skills/excel-doctor/scripts/*.py",
]

[tool.coverage.run]
branch = true
source = ["sheet_doctor", "skills", "web"]
omit = [
  "tests/*",
  "sample-data/*",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
precision = 1
exclude_lines = [
  "pragma: no cover",
  "if __name__ == .__main__.:",
  "raise SystemExit",
]
